<resources>
    <string name="app_name">Hisab</string>

    <string name="home_foods">Foods</string>
    <string name="check_fetira">Fetira</string>
    <string name="check_ful_medames">Ful Medames</string>
    <string name="check_chechebsa">Chechebsa</string>
    <string name="check_tibs_firfir">Tibs Firfir</string>
    <string name="home_meal_type">Meal Type</string>

    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string name="home_total_people">Total people: 5</string>
    <string name="home_waiter_name">Waiter\'s name</string>
    <string name="home_waiter_name_hint">Abebe Kebede</string>

    <string name="home_button_clear_all">Clear All</string>
    <string name="home_button_calculate">Calculate</string>

</resources>